testdata/baselines/reference/submodule/compiler/declFileModuleContinuation.errors.txt
declFileModuleContinuation.ts(7,33): error TS2694: Namespace 'A' has no exported member 'C'.


==== declFileModuleContinuation.ts (1 errors) ====
    module A.C {
        export interface Z {
        }
    }
    
    module A.B.C {
        export class W implements A.C.Z {
                                    ~
!!! error TS2694: Namespace 'A' has no exported member 'C'.
        }
    }